RESOLVED FIXED117624
Should not call firePaintRelatedMilestones() for "update control tints" paint pass
https://bugs.webkit.org/show_bug.cgi?id=117624
Summary Should not call firePaintRelatedMilestones() for "update control tints" paint...
Simon Fraser (smfr)
Reported 2013-06-13 21:18:31 PDT
We should not call firePaintRelatedMilestones() for the "update control tints" paint that we do on window activation, not should we tell the inspector that painting happened.
Attachments
Patch (2.21 KB, patch)
2013-06-13 21:22 PDT, Simon Fraser (smfr)
sam: review+
Simon Fraser (smfr)
Comment 1 2013-06-13 21:18:45 PDT
^nor should
Simon Fraser (smfr)
Comment 2 2013-06-13 21:22:53 PDT
Simon Fraser (smfr)
Comment 3 2013-06-13 21:59:40 PDT
Note You need to log in before you can comment on or make changes to this bug.