Should not call firePaintRelatedMilestones() for "update control tints" paint pass https://bugs.webkit.org/show_bug.cgi?id=117624

Reviewed by Sam Weinig.

When window activation changes, we do a fake paint pass that is just used to
invalidate controls that change their appearance in background windows. This fake
paint should not be recorded in the inspector, and it should not cause paint-related
milestones to fire.

* page/FrameView.cpp:
(WebCore::FrameView::paintContents):

Canonical link: https://commits.webkit.org/135782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151579 268f45cc-cd09-0410-ab3c-d52691b4dbfc